--- a/my_works/task_10/catalog_of_goods/css/style.css
+++ b/my_works/task_10/catalog_of_goods/css/style.css
@@ -1,12 +1,13 @@
 * {
   box-sizing: content-box;
   text-transform: uppercase;
-  font-family: sans-serif;
+  /* font-family:" Arial", sans-serif; */
 }
 body {
   margin: 207px;
   display: flex;
   justify-content: center;
+  font-family:" Arial", sans-serif;
 }
 a{
   text-decoration: none;
