--- a/my_works/task_10/catalog_of_goods/css/style.css
+++ b/my_works/task_10/catalog_of_goods/css/style.css
@@ -1,219 +1,169 @@
 * {
-  box-sizing: content-box;
-  text-transform: uppercase;
-  /* font-family:" Arial", sans-serif; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* text-transform: uppercase;
+  font-weight: bold; */
 }
-body {
-  margin: 207px;
-  display: flex;
-  justify-content: center;
-  font-family:" Arial", sans-serif;
+img {
+  display: block;
+  width: 100%;
+  /* margin-bottom: 20px; */
 }
-a{
-  text-decoration: none;
-}
-
-.wraper {
-  width: 1106px;
-  height: 710px;
-  padding-left: 70px;
-  padding-right: 70px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(255, 255, 255);
-}
-
 h1 {
-  margin-top: 10px;
-  font-size: 28px;
+  /* display: block;
+  margin: 0 auto; */
+  text-align: center;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
-.conteiner-items {
+.container {
   position: relative;
-  width: 1073px;
-  height: 510px;
-  margin-bottom: 26px;
+  display: flex;
+  max-width: 970px;
+  min-height: 455px;
+  margin: 0 auto;
+  border: 1px solid grey;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.card {
+  width: 25%;
+  position: relative;
+  padding: 0 20px;
+  /* border-right: 1px solid grey ; */
+}
+
+/* .card:not(:last-child){
+  border-right: 1px solid grey ;
+} */
+
+.card:not(:last-child) {
+  border-right: 1px solid grey;
+}
+
+.category {
+  height: 100px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
-  align-items: stretch;
-  border: 1px solid #d3d3d3;
-  /* vertical-align: text-top; */
-  background-color: red;
-}
-
-.swiper {
-  width: 33px;
-  height: 33px;
-  border: 1px solid #d3d3d3;
-  border-radius: 50%;
-  line-height: 33px; /* центруємо текст*/
-  text-align: center; /* центруємо текст*/
-  cursor: pointer;
-  color: #d3d3d3;
-}
-
-.swiper_right {
-  position: relative;
-  top: 127px;
-  left: 540px;
-  z-index: 1;
-  background-color: rgb(255, 255, 255);
-}
-
-.swiper_right:hover{
-  position: relative;
-  top: 127px;
-  left: 540px;
-  z-index: 1;
-  background-color: #d3d3d3;
-  color: white;
-}
-
-.swiper_left {
-  position: relative;
-  top: 160px;
-  left: -540px;
-  z-index: 1;
-  background-color: rgb(255, 255, 255);
-}
-
-.swiper_left:hover{
-  position: relative;
-  top: 160px;
-  left: -540px;
-  z-index: 1;
-  background-color: #d3d3d3;
-  color: white;
-}
-
-.content-item {
-  width: 25%;
-  padding: 0 18px;
-  border: 1px solid #d3d3d3;
-  display: flex;
-  flex-direction: column;
-  align-self: stretch;
   align-items: center;
-  position: relative;
-  background-color: rgb(255, 255, 255);
+  border-bottom: 1px solid grey;
+  cursor: pointer;
+  font-weight: normal;
 }
 
-.deal {
-}
-
-.deal_novelty {
+.stick {
+  display: flex; /*вирівнювання тексту*/
+  justify-content: center; /*вирівнювання тексту*/
+  align-items: center; /*вирівнювання тексту*/
+  position: absolute; /*вибиваємо із потоку, щоб інші елементи його не бачили і він не заважав іншим елементам*/
+  top: -35px;
+  right: 10px;
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  text-align: center;
-  position: absolute;
-  right: 10px;
-  top: -40px;
-  line-height: 70px;
-  font-size: 12px;
-  border: 4px solid rgb(255, 255, 255);
-  color: white;
+  font-size: 11px;
+  text-align: center; /*вирівнювання тексту*/
+  /* text-transform: uppercase; */
+  border: 3px solid #fff;
+  color: #fff;
+}
+
+.stick__new {
   background-color: #86b022;
 }
-
-.deal_hit-sales {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  right: 10px;
-  top: -40px;
-  font-size: 12px;
-  border: 4px solid rgb(255, 255, 255);
-  color: white;
+.stick__hit {
   background-color: #009de1;
 }
 
-.subject {
-  margin-top: 43px;
-  margin-bottom: 22px;
-  font-size: 18px;
-  text-align: center;
-  color: #998782;
+.card-img{
+  cursor: pointer;
+  min-height: 300px;
 }
 
-.subject::after {
-  content: "";
-  display: block;
-  width: 230px;
-  margin: 43px auto 0;
-  border: 1px solid #d3d3d3;
-
-}
-
-.image {
-  margin-bottom: 24px;
-}
-
-.product_name {
-  margin-bottom: 36px;
-  font-size: 18px;
-  font-weight: bold;
-  color: #009be3;
-}
-
-.prise {
-  margin-bottom: 26px;
-}
-
-.old_price {
-  font-size: 14px;
-  text-decoration: line-through;
-
-}
-
-.actual_prise {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.currency_actual-prise {
-  font-size: 16px;
-}
-
-.the-price-is-formed {
-}
-
-.button_on-sale-soon {
-  display: flex;
-  width: 140px;
-  height: 40px;
-  text-align: center;
-  line-height: 20px; /* задаємо значення в 20px, яке в 2 рази (адже маємо 2 рядки) менше за висоту height:20; */
-  margin-bottom: 40px;
-  background-color: #cc3399;
-  color: #ffffff;
-  font-size: 14px;
-  /* padding: 5px 10px; */
-}
-
-.button_basket {
+.card-title {
   display: flex;
   justify-content: center;
-  width: 140px;
+  align-items: center;
+  cursor: pointer;
+  color: #009be3;
+  min-height: 20px;
+  margin-bottom: 20px;
+}
+
+.card-price {
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 20px;
+  margin-bottom: 20px;
+}
+
+.card-price__old{
+  font-weight: normal;
+  text-decoration: line-through;
+}
+
+
+.card-btn {
+  width: 150px;
   height: 40px;
   text-align: center;
-  line-height: 40px;
+  /* line-height: 30px; */
+  margin: 0 auto;
+
+  cursor: pointer;
+  /* color: grey; */
+  display: flex; /*вирівнювання тексту*/
+  justify-content: center; /*вирівнювання тексту*/
+  align-items: center;
+  min-height: 20px;
   margin-bottom: 40px;
+}
+
+.card-btn__before-the-sale {
+  color: white;
+  background-color: #cc3399;
+}
+.card-btn__in-basket {
+  color: #000;
   background-color: #f0e524;
 }
 
-.deal {
+.swipe {
+  position: absolute;
+  z-index: 1;
+  top: 83px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid grey;
+  text-align: center;
+  line-height: 30px;
+  background-color: #fff;
+  cursor: pointer;
+  color: grey;
 }
 
-.deal_novelty {
+.swipe__left {
+  left: -15px;
+}
+.swipe__right {
+  right: -15px;
 }
 
-.deal_hit-sales {
+.swipe:hover {
+  position: absolute;
+  top: 100px;
+  background-color: #d3d3d3;
+  color: white;
+}
+.swipe_right:hover {
+  left: -15px;
+}
+.swipe_left:hover {
+  left: -15px;
 }
