--- a/my_works/task_10/catalog_of_goods/css/style.css
+++ b/my_works/task_10/catalog_of_goods/css/style.css
@@ -12,6 +12,7 @@ img {
 h1 {
   /* display: block;
   margin: 0 auto; */
+  margin: 20px 0;
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
