--- a/my_works/task_9/task_metal-band/css/style.css
+++ b/my_works/task_9/task_metal-band/css/style.css
@@ -4,23 +4,16 @@
 *
 */
 
-/* General */
-
-/* Header */
-
-/* Tour */
-
-/* Gallery */
-
-/* Subscribe */
-
-/* Footer */
-
 @import url(https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap );
 @import url(https://fonts.googleapis.com/css2?family=Metal+Mania&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap);
 
+/* General */
 *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   color: white;
+  text-transform: uppercase;
 }
 body{
   width: 100vw;
@@ -30,6 +23,11 @@ body{
 a{
   text-decoration: none;
 }
+.button, button{
+  background-color: red;
+}
+
+/* Header */
 header{
   height: 500px;
   background-image: url(../img/bg-01.jpg);
@@ -37,198 +35,195 @@ header{
   background-size: cover;
 }
 
-.container{
+#topbar > .container,
+#tour >.container,
+#gallery .container,
+#subscribe > .container{
+  display: flex;
   max-width: 60.6vw;
-margin: 0 auto;
-display: flex;
-flex-direction: column;
+  margin: 0 auto;
 }
 
-.menu{
+
+ #topbar > .container{
+  justify-content: flex-start;
 }
+
 ul{
   display: flex;
+  margin-left: 50px;
 }
 li {
   padding: 20px 30px;
   background-color: rgb(0, 0, 0);
   opacity: 0.7;
+  cursor: pointer;
 }
 li:hover { 
   padding: 20px 30px;
   background-color: red;
   opacity: 0.8;
+  cursor: pointer;
 }
 
 h1 {
-  font-size: 96px; 
-  font-weight: 400;
-  font-style: normal;
   display: block;
   padding: 93px 0 65px;
   text-align: center;
+  font-size: 96px; 
+  font-weight: 400;
+  font-style: normal;
   font-family: "Metal Mania", serif;
 }
 
-header > .container > a {
-  padding: 20px 40px;
-  margin: 0px auto 50px;
-  text-transform: uppercase;
-  background-color: red;
-}
-
-h2 {
-  width: 66.6vw;
-  margin: 40px 0;
+/*header > .container{    не працює??? верстка ламається при маштабуванні браузера
+  min-width: 60.6vw;
+  margin: 0 auto;
   display: block;
-  align-items: center;
+}*/
+
+header > .container > a {
+  width: 288px;
+  height: 53px;
+  margin: 0 auto;
+  display: block;
+  line-height: 53px;
   text-align: center;
-  font-size: 36px;
-  text-transform: uppercase;
-  font-family: "Open Sans", sans-serif;
-  font-weight:lighter;
 }
 
+/* Tour */
 #tour >.container{
-  display: flex;
-  flex-direction: row;
-  justify-content:space-between;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  justify-content: center;
+  gap: 20px;
+}
+
+ h2{
+  min-width: 100%;
+  margin: 40px auto 20px;
+  text-align: center;
+  align-items: center;
+  font-size:24px; 
+  font-weight:lighter;
+  font-style: normal;
 }
 
 .tour-card {
-  width: 14.0vw;
-  height: 14.5vw;
-  display: flex;
-  flex-direction: column; 
-  justify-content: center;
-  font-family: "Open Sans", sans-serif;
+  width: 220px;
+  min-height: 240px;
+  padding: 30px 15px;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: contain; 
+  Background-position:center;
   background-color: black;
 }
 
 .madrid{
-  background-image: url(../img/tour/madrid.jpg);
-  background-repeat: no-repeat;
-  background-size: contain; 
-  Background-position:center;
+  background-image: url(../img/tour/madrid.jpg), url(../img/bg.png);
  }
 .turin{
-  background-image: url(../img/tour/turin.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  Background-position:center;
+  background-image: url(../img/tour/turin.jpg), url(../img/bg.png);
 }
 .hamburg{
-  background-image: url(../img/tour/hamburg.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  Background-position:center;
+  background-image: url(../img/tour/hamburg.jpg), url(../img/bg.png);
 }
 .krakow{
-  background-image: url(../img/tour/krakow.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  Background-position:center;
+  background-image: url(../img/tour/krakow.jpg), url(../img/bg.png);
 }
 
 .tour-town {
-  margin-top: -30px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  font-size: 20px;
-  text-transform: uppercase;
-}
+  margin-top: 10px;
+  font-size: 0.9rem;
+} 
 
-.tour-place {
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
-
-.tour-date {
-  margin-bottom: 20px;
-  margin-left: 10px;
+.tour-place,
+.tour-date  {
+  margin-top: 10px;
+  font-size: 0.8rem;
   font-style: italic;
+  text-transform: none;
 }
 
 #tour > .container > .tour-card > .button {
-  display: inline-block;
-  padding: 12px 36px;
-  margin: 0 auto;
-  text-transform: uppercase;
-  background-color: red;
+  width: 140px;
+  height: 34px;
+  display:block;
+  margin: 30px auto ;
+  text-align: center;
+  line-height: 34px;
 }
 
-#gallery >.container{
-  display: flex;
-  flex-direction: row;
-  justify-content:space-between;
-  flex-wrap:wrap;
+/* Gallery */
+#gallery {
+  margin-bottom: 50px;
 }
 
-figure{
-  width: 303px;
-height: 303px;
-  display: block;
-/*margin: 0 auto;*/
-  margin: 10px 10px;
+#gallery .container {
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
+.photo{
+ /* min-width: calc(33.333333% - 20px);   -не працює!!! gap при min-width не тримається в 20px*/
+  background-position: center;
+  background-size: cover;
+  }
+
+/* Subscribe */
 #subscribe{
   height: 310px;
   margin-top: 40px;
-  position: relative;
-}
-
-#subscribe::before {
-  content: "";
-  background-image:url(../img/bg-02.jpg);
+  background-image: url(../img/bg-02.jpg);
   background-position: center;
   background-size: cover;
-  height: 310px;
-  opacity: 0.5;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;   
 }
 
 #subscribe > .container{
-  display: flex;
-  flex-direction: row;
-  justify-content:space-between;
-  flex-wrap:wrap;
   justify-content: center;
+  flex-direction: column;
 }
 
 #subscribe > .container > .pitch{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
+  margin: 0 auto;
 }
+
 
 #subscribe > .container > .pitch > h2{
   margin-top: 75px;
+  margin-bottom: 45px;
+}
+
+ p{
+  text-transform: none;
+}
+
+.subscribe-form{
+  display: flex;
+  justify-content: center;
 }
 
 input {
-margin-top: 25px;
-padding: 12px 20px;
-font-size: 20px;
+  margin-top: 25px;
+  padding: 12px 20px;
+  font-size: 20px;
 }
+
 button{
   margin-top: 25px;
-  font-size: 20px;
   padding: 12px 20px;
-  text-transform: uppercase;
+  font-size: 20px;
   background-color: #e71022;
 }
 
+/* Footer */
 footer > .container > .social{
   margin: 30px 0 20px;
   display: flex;
-  flex-direction: row;
   justify-content:center;
   flex-wrap:wrap;
 }
@@ -239,11 +234,5 @@ footer > .container > .social{
 footer > .container > .copyright{
   margin-bottom: 25px;
   display: flex;
-  flex-direction: row;
   justify-content:center;
-}
-
-footer > .container{
-max-width: 100vw;
-background-color: #202020;
-}
+} 
