--- a/my_works/task_7/burger_menu/styles/style.css
+++ b/my_works/task_7/burger_menu/styles/style.css
@@ -2,155 +2,125 @@
   padding: 0;
   margin: 0;
   border: 0;
-}
-
-body {
-  margin: 0;
-}
-
-img {
-  width: 100%;
-  height: 390px;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
+  box-sizing: border-box;
 }
 
 li{
   list-style-type: none;
 }
 
-.page-background {
+.t-text{
+  text-transform: uppercase;
+}
+.a-text{
+  text-align: center;
+}
+.d-block{
+  display: block;
+}
+.color-text{
+  color: #9b9b9b;
+}
+
+body {
   width: 100vw;
   height: 100vh;
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(135deg, #251e20 0%, #453937 100%);
 }
 
-.main-side {
-  width: 940px;
-  height: 390px;
+.main-side{
   min-width: 940px;
-  margin: 0 auto;
+  min-height: 390px;
+  background-color: rgb(255, 255, 255);
   display: flex;
-  position: relative;
-  background-color: white;
 }
 
-.left-side {
+.left-side{
   width: 30%;
-  min-width: 30%;
+  min-height: 390px;
+  background-image:url(../sourse/img/burg21.jpg);
+  background-size: cover;
+  background-position: center;
   position: relative;
-  background-color: #3f6592;
+  color: white;
+}
+.left-side__inscription{
+  position: absolute;
+  width: 103%;
+  height: 50%;
+  bottom: 26px;
+  right: 5px;
+  background-color: #000;
 }
 
-.left_side__image__inscription {
-  width: 82%;
-  height: 30%;
-  font-size: 20px;
-  padding: 35px 30px;
+.inscription__lable__general  {
+  position: absolute;
+  bottom: 56px;
+  left: 52px;
   font-size: 40px;
   font-weight: bold;
-  text-align: center;
-  line-height: 0.8;
-  position: absolute;
-  top: 170px;
-  right: 4px;
-  background-color: black;
-  color: white;
+  line-height:31px;
 }
 
-span {
+p{
+  word-spacing: 1px;
+  white-space:nowrap;
+}
+.inscription__everything{
+  font-size: 24px;
+  color: #f7c739;
+}
+.inscription__price{
   font-size: 20px;
-  line-height: 2.1;
-  font-family: "Arial", serif;
-  color: #f7c73a;
 }
-
-.left-side__price {
-  font-size: 20px;
-  line-height: 2.1;
-  font-family: "Arial", serif;
-}
-.left-side__price__number,  .currency{
-  color: white;
-}
-
-.left-side__price__number {
-  font-size: 17px;
-}
-
-.currency{
-  font-size: 19px;
+.inscription__currency{
+  font-size: 24px;
+  font-weight: lighter;
 }
 
 .right-side{
   width: 70%;
-  font-size: 20px;
+  min-height: 390px;
+  position: relative;
+  background-color: #fff;
+  color: #333333;
+  font-size: 18px;
 }
 
 .right-side__title{
-/*   margin-top: 44px; */
-/*   margin-bottom: 30px; */
-  padding-top:44px;
-  padding-bottom:10px;
+  text-align: center;
+  margin: 45px 0 30px;
+}
+
+.conteiner{
+  display: flex;
+  position: relative;
+}
+.column{
+  width: 50%;
+}
+.column-item{
+  position: relative;
+  width: 200px ;
   margin: 0 auto;
   text-align: center;
-  font-weight: lighter;
+  padding: 20px;
+  border-bottom: 1px solid #d5d5d5;
 }
 
-.right-side__content__column-1{
-  position: relative;
-  right: 150px;
-}
-
-.right-side__content__column-2{
-  position: relative;
-  left: 140px;
-  top: -254px;
-}
-
-.right-side__content__item{
-margin-top: 35px;
-}
-
-.right-side__content__item::before{
+.column-item::after{
   content: "";
+  position: absolute;
+  bottom: -5px;
+  left: calc(50% - 5px);
   display: block;
-  width: 200px;
-  border-top: 1px solid #999999;
-  position: relative;
-  left: 35%;
-  bottom: -55px;
-}
-.right-side__content__item::after{
-  content: "";
-  display: block;
-  width: 8px;
-  height: 8px;
-  background: #999999;
-  position: relative;
-  left: 50%;
-  bottom: -9px;
-  transform: rotate(-45deg);
-}
-
-.right-side__content__item-name{
-  margin: 0 auto;
-  text-align: center;
-}
-
-.right-side__content__item-price{
-  margin: 0 auto;
-  text-align: center;
-  font-size: 16px;
-  font-weight: bold;
-  color: #999999;
+  width: 10px;
+  height: 10px;
+  background-color: #d5d5d5;
+  transform: rotate(54deg);
 }
 
 .button {
@@ -158,25 +128,14 @@ margin-top: 35px;
   height: 55px;
   position: absolute;
   padding: 10px 30px;
-  /* top:102%; */
-  /* left:81%; */
-  bottom: -60px;
+  bottom: -65px;
   right: 0;
+   font-size: 18px;
   font-weight: bold;
-  background: black;
+  background: #000;
   color: white;
 }
 
-/* .right-side__content__item-name ul{
-  margin: 0 auto;
-  text-align: center;
-}
 
-.right-side__content__item-price ul{
-  margin: 0 auto;
-  text-align: center;
-  font-size: 16px;
-  font-weight: bold;
-  color: #999999;
-} */
+
 
